--- a/client/src/style.css
+++ b/client/src/style.css
@@ -3,24 +3,14 @@
   padding: 0;
 }
 
+:root {
+  --black: #080808;
+  --black60: #08080860;
+}
+
 div {
   box-sizing: border-box;
   display: flex;
-}
-
-button {
-  margin-top: 10px;
-  outline: none;
-  border: 2px solid #080808;
-  padding: 0.5rem;
-  border-radius: 4px;
-  color: #080808;
-  background: transparent;
-}
-
-button:hover {
-  background: #080808;
-  color: #ffffff;
 }
 
 .container {
@@ -28,54 +18,4 @@ button:hover {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-
-.buttons {
-  width: 100%;
-  max-width: 800px;
-  justify-content: space-around;
-}
-
-#board {
-  min-width: 800px;
-  min-height: 600px;
-  flex-wrap: wrap;
-}
-
-.flip-card {
-  width: 25%;
-  padding: 20px;
-  transition: order 2s;
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.6);
-}
-
-.flip-card.flipped .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #080808;
-}
-
-.flip-card-back {
-  transform: rotateY(180deg);
-  background-position: center center;
-  background-size: cover;
 }
